--- a/API_Practice.ipynb
+++ b/API_Practice.ipynb
@@ -74,7 +74,7 @@
     }
    ],
    "source": [
-    "# Make a 'Get' request for the city weather.\n",
+    "# Make a 'Get' request for the city weather\n",
     "city_weather=requests.get(city_url)\n",
     "\n",
     "city_weather"
