--- a/random_numbers.ipynb
+++ b/random_numbers.ipynb
@@ -29,7 +29,7 @@
     }
    ],
    "source": [
-    "# Get a random integer between a range\n",
+    "# Get a random integer between a range.\n",
     "random.randint(-90,90)"
    ]
   },
